Further reduce unnecessary commons lang usage allowing agent-launcher removal